--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <title>Periodic Table of D&D Classes</title>
+    <meta charset="utf8" />
     <style>
       body {
         font-family: sans-serif;
