Warlord appeared twice

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
 
         <div class="row3 col1">
           <div class="hd">d10</div>
-          <h2>Wl</h2>
-          <p>Warlord</p>
+          <h2>Cv</h2>
+          <p>Cavalier</p>
         </div>
         <div class="row3 col2">
           <div class="hd">d6</div>
